--- a/_layouts/codecraft.html
+++ b/_layouts/codecraft.html
@@ -179,16 +179,16 @@
 
                 const resultLink = document.createElement('a');
                 resultLink.classList.add('search-result');
-                resultLink.addEventListener('click', (event) => {
+                resultLink.href = doc.url;
+                resultLink.addEventListener('click', event => {
                     event.preventDefault(); // ✅ Prevent default navigation
-                    searchInput.value = ''; // ✅ Clears search input field
+                    window.location.href = doc.url;
                     setTimeout(() => {
-                        window.location.href = resultLink.href; // 🔥 Follow link after clearing
+                        searchInput.value = ''; // ✅ Clears search input field
                     }, 10);
                 });
 
 
-                resultLink.href = doc.url;
                 resultsListItem.appendChild(resultLink);
 
                 const resultTitle = document.createElement('div');
