--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -2,9 +2,9 @@
     <meta charset="UTF-8">
     <link rel="preconnect" href="{{ domain }}">
     <link rel="preconnect" href="https://github.com">
-    <link rel="preload" href="{{folder}}/style.css" as="style" onload="this.rel='stylesheet'">{% for fontface in site.fonts %}
+    <link rel="preload" href="{{folder}}/style.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="preload" type="text/css" href="{{ css }}" as="style" onload="this.rel='stylesheet'">{% for fontface in site.fonts %}
     <link rel="preload" as="font" type="font/{{ fontface.extension }}" href="{{ asset }}/{{ fontface.name }}-{{ fontface.weight }}.{{ fontface.extension }}" crossorigin="anonymous">{% endfor %}
-    <link rel="preload" type="text/css" href="{{ css }}" as="style" onload="this.rel='stylesheet'">
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
     <link rel="preconnect" crossorigin="anonymous" href="https://cdn.jsdelivr.net">
     <link rel="dns-prefetch" href="https://utteranc.es">
