--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -6,12 +6,6 @@
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
     <link rel="preconnect" crossorigin="anonymous" href="https://cdn.jsdelivr.net">
     <link rel="dns-prefetch" href="https://utteranc.es">
-    <link rel="icon" type="image/x-icon" href="{{ icon }}">
-    <link rel="dns-prefetch" href="https://translate.google.com">
-    <link rel="dns-prefetch" href="https://translate.googleapis.com">
-    <link rel="preconnect"   crossorigin="anonymous" href="https://translate.google.com">
-    <link rel="preconnect"   crossorigin="anonymous" href="https://translate.googleapis.com">
-    <link rel="canonical" href="{{ folder }}{{ page.url }}">    
     <title>{%- include components/title.html -%}</title>
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=contain">
@@ -36,8 +30,16 @@
     <meta property="og:site_name" content="{{ meta.title }}">
     <meta property="og:type" content="website">
     <meta property="twitter:title" content="{%- include components/title.html -%}">
+    <link rel="icon" type="image/x-icon" href="{{ icon }}">
     <link rel="preload" type="text/css" href="{{ css }}" as="style" onload="this.rel='stylesheet'">{% for fontface in site.fonts %}
     <link rel="preload" as="font" type="font/{{ fontface.extension }}" href="{{ asset }}/{{ fontface.name }}-{{ fontface.weight }}.{{ fontface.extension }}" crossorigin="anonymous">{% endfor %}
+    <link rel="preload" as="script" href="{{ js }}">{% for item in site.version %}{% if page[item.first] != false %}
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/{{ item.first }}@{{ item.last }}/+esm" as="script">{% endif %}{% endfor %}
+    <link rel="dns-prefetch" href="https://translate.google.com">
+    <link rel="dns-prefetch" href="https://translate.googleapis.com">
+    <link rel="preconnect"   crossorigin="anonymous" href="https://translate.google.com">
+    <link rel="preconnect"   crossorigin="anonymous" href="https://translate.googleapis.com">
+    <link rel="canonical" href="{{ folder }}{{ page.url }}">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
