--- a/_includes/components/category.html
+++ b/_includes/components/category.html
@@ -1,3 +1,3 @@
-{% assign collection_items = site[page.collection] %}{% assign grouped_items = collection_items | group_by: "date" %}{% for year_group in grouped_items %}
+{% assign grouped_items = collection_items | group_by: "date" %}{% for year_group in grouped_items %}
 <h3>{{ year_group.name | date: "%Y" }}</h3>{% for item in year_group.items %}
 <p><a href="{{ folder }}{{ item.url }}">{{ item.date | date: "%m-%d" }} - {{ item.title }}</a></p>{% endfor %}{% endfor %}
