--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -10,7 +10,8 @@
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=contain">
     <meta name="copyright" content="{{meta.title}} ©{{ page.date | date: '%Y' | default: site.time | date: '%Y' }} {{ page.author | default: meta.author }}">
-    <meta name="author" content="{{ page.author | default: meta.author }}">
+    <meta name="author" content="{{ page.author | default: meta.author }}">{% if page.banner %}
+    <meta name="illustration" content="Tinashe Mugayi | Noun Project">{% endif %}
     <meta name="repository" content="{{ page.repository | default: meta.repository }}">
     <meta name="date" content="{{ page.date | date: '%B %d, %Y' | default: site.time | date: '%B %d, %Y' }}">
     <meta name="robots" content="index, follow">
