--- a/assets/codeCraft.css
+++ b/assets/codeCraft.css
@@ -721,6 +721,31 @@ main ol li {
         opacity: .9;
     }
 
+    .banner {
+        line-height: 5;
+        color: var(--c4) !important;
+        padding-top: 0rem !important;
+        padding-bottom: 0 !important;
+        margin-top: 2.3rem !important;
+        margin-bottom: -7rem !important;
+        background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 100 125"><path fill="none" d="M5 5.03h90v90H5z"/><path fill="%23E3E7D9" d="M94.63 86.6 86.2 62l-.45-6.75c-.01-.15-.05-.3-.12-.44l-1.56-3.2L81.3 10a1.19 1.19 0 0 0-.56-.94L74.5 5.23a1.2 1.2 0 0 0-.62-.18H26.12c-.22 0-.44.06-.62.18l-6.24 3.83c-.33.2-.54.55-.56.94l-2.77 41.6-1.56 3.2c-.07.14-.1.3-.12.45l-.45 6.73-8.43 24.63a1.2 1.2 0 0 0 0 .76l2.26 6.82c.16.5.61.82 1.13.82h82.48c.52 0 .97-.33 1.13-.82l2.26-6.82a1.2 1.2 0 0 0 0-.76zM16.6 55.8h66.8l.38 5.7H16.22l.38-5.7zm-.6 7.14h68l8 23.34H8l8-23.34zm5.03-52.15h57.94l2.69 40.4H18.34l2.69-40.4zm69.35 81.84H9.62l-1.63-4.92H92l-1.63 4.92z"/><path fill="%23E3E7D9" d="m88.4 82.6-1.87-5.45-1.88-5.51-1.9-5.53a.71.71 0 0 0-.67-.48H70.4a.72.72 0 0 0-.7.86l1.2 5.5V72l1.2 5.5v.01l1.2 5.51c.08.33.37.56.7.56h13.72c.4 0 .72-.32.72-.71 0-.1-.02-.2-.05-.28zM72.5 72.57h4.75l1.14 4.08h-5l-.9-4.09zm6.23 0h4.72l1.4 4.08h-4.98l-1.14-4.09zm2.84-5.52 1.4 4.09h-4.64l-1.14-4.09h4.38zm-5.87 0 1.15 4.09h-4.66l-.9-4.09h4.41zm-1.1 15.11-.9-4.08h5.1l1.14 4.08h-5.35zm6.82 0-1.15-4.08h5.07l1.4 4.08h-5.32zm-2.45-34.44-2.23-33.56a.48.48 0 0 0-.48-.44H23.73c-.25 0-.45.2-.47.44l-2.23 33.6a.47.47 0 0 0 .47.5h57a.48.48 0 0 0 .47-.54zm-11.05-7.68a4.21 4.21 0 0 1-3.6 3.48 201.68 201.68 0 0 1-28.63 0 4.2 4.2 0 0 1-3.6-3.48 80.43 80.43 0 0 1 0-18.1 4.2 4.2 0 0 1 3.6-3.47 201.06 201.06 0 0 1 28.62 0 4.21 4.21 0 0 1 3.6 3.47 79.4 79.4 0 0 1 0 18.1zM60.49 77.3v-.01l-.52-5.51-.51-5.5a.71.71 0 0 0-.71-.65H17.92a.7.7 0 0 0-.67.48l-1.9 5.53-1.88 5.51-1.89 5.5a.71.71 0 0 0 .68.94h48.03a.71.71 0 0 0 .71-.78l-.51-5.51zm-37.74-4.73h4.75l-.9 4.08h-5l1.15-4.09zm6.21 0h4.77l-.64 4.08h-5.02l.9-4.09zm6.21 0h4.78l-.38 4.08h-5.03l.63-4.09zm6.22 0h4.79l-.13 4.08H41l.38-4.09zm6.21 0h4.8l.12 4.08h-5.04l.12-4.09zm.17-5.52h4.45l.13 4.09h-4.7l.13-4.09zm6.05 5.52h4.8l.37 4.08h-5.04l-.13-4.09zm4.28-5.52.38 4.09h-4.7l-.13-4.09h4.45zm-11.88 4.09h-4.7l.38-4.09h4.45l-.13 4.09zm-6.13 0h-4.7l.64-4.09h4.44l-.38 4.09zm-6.14 0h-4.68l.9-4.09h4.41l-.63 4.09zm-6.14 0h-4.66l1.15-4.09h4.4l-.89 4.09zm-9.38-4.09h4.38l-1.14 4.09h-4.64l1.4-4.09zm-1.88 5.52h4.72l-1.15 4.08h-4.97l1.4-4.09zm-1.9 5.5h5.07l-1.14 4.1h-5.32l1.4-4.1zm6.56 0h5.09l-.9 4.1h-5.34l1.15-4.1zm6.55 0h5.1l-.63 4.1h-5.36l.89-4.1zm6.55 0h5.13l-.38 4.1h-5.38l.63-4.1zm6.56 0H46l-.12 4.1h-5.39l.38-4.1zm6.44 4.1.12-4.1h5.14l.12 4.1h-5.38zm6.81 0-.12-4.1h5.13l.38 4.1h-5.39z"/></svg>') no-repeat center top / 5rem;
+    }
+    .list {
+        font-family: var(--font-code), var(--font-basic);
+    }
+    .list span {
+        padding-left: 1ch;
+        display: inline-block;
+        width: 9ch;
+        border-right: 2px solid var(--c4);
+        color: var(--c3);
+        transition: 100ms color;
+    }
+    .list:hover span {
+        background-color: var(--c4);
+        color: var(--r0);
+    }
+
     @media (width > 575px) {
 
         #comments-utteranc {
